--- a/Server API/package.json
+++ b/Server API/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.1.0",
     "body-parser": "~1.8.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
@@ -16,11 +17,15 @@
     "express-jwt": "^0.4.0",
     "express-session": "^1.8.2",
     "jsonwebtoken": "^1.1.2",
+    "jwt-simple": "^0.2.0",
+    "moment": "^2.8.3",
     "mongoose": "^3.8.16",
     "morgan": "~1.3.0",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
     "passport-local": "^1.0.0",
+    "querystring": "^0.2.0",
+    "request": "^2.45.0",
     "serve-favicon": "~2.1.3"
   }
 }
